--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
         "electron"
     ],
     "devDependencies": {
+        "@types/sync-fetch": "^0.4.0",
         "electron": "^22.0.0",
         "electron-builder": "^23.6.0",
         "typescript": "^4.9.4"
     },
     "dependencies": {
         "@cliqz/adblocker-electron": "^1.25.1",
-        "cross-fetch": "^3.1.5"
+        "cross-fetch": "^3.1.5",
+        "sync-fetch": "^0.4.2"
     }
 }
